# system-as-a-graph

./: Makefile  README.md  main.py  pyproject.toml
adp/src/api/: routes.py
adp/tests/: test_api.py
csm/data_binder/src/api/: routes.py
csm/data_binder/tests/: test_api.py
csm/model_manager/src/api/: routes.py
csm/model_manager/tests/: test_api.py
docs/design/: CDR.md  SDD.md  UXD.md
docs/planning/: SDP.md
docs/requirements/: SRS.md  SSS.md
docs/test/: STD.md
frd/src/api/: routes.py
frd/tests/: test_api.py
msd/src/api/: routes.py
msd/tests/: test_api.py
scg/src/api/: routes.py
scg/tests/: test_api.py
vae/design_analyzer/src/api/: routes.py
vae/design_analyzer/tests/: test_api.py
vae/design_evaluator/src/api/: routes.py
vae/design_evaluator/tests/: test_api.py
vae/design_verifier/src/api/: routes.py
vae/design_verifier/tests/: test_api.py
web/: .gitignore  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts
web/app/: globals.css  layout.tsx  page.tsx
web/e2e/: home.spec.ts
